fixed navbar z-index

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -6,6 +6,7 @@
     width: 100%;
     padding: 0 1rem;
     border-bottom: 1px solid var(--color-primary);
+    z-index: 1000;
 }
 
 .button-group {
